[gd_scene load_steps=32 format=3 uid="uid://ry74gl4m76pq"]

[ext_resource type="Script" path="res://Scripts/ButtonController.gd" id="1_g8cfh"]
[ext_resource type="Script" path="res://Scripts/Game.gd" id="1_ogyp8"]
[ext_resource type="PackedScene" uid="uid://cef84qm7nly4w" path="res://Scenes/Player.tscn" id="1_r5yxd"]
[ext_resource type="Script" path="res://Scenes/Clock.gd" id="2_1a6f2"]
[ext_resource type="PackedScene" uid="uid://y1sn6xg6jkux" path="res://Scenes/Door.tscn" id="2_6y7mn"]
[ext_resource type="Script" path="res://Scenes/Power.gd" id="2_x087o"]
[ext_resource type="LabelSettings" uid="uid://b5nfth8dtmleb" path="res://UIText.tres" id="3_a7h8y"]
[ext_resource type="PackedScene" uid="uid://f7kgekkpc8q4" path="res://Scenes/DoorButton.tscn" id="3_dfoe6"]
[ext_resource type="BoxMesh" uid="uid://b6l5rbf1uvti0" path="res://Materials/WallMesh.tres" id="4_kaq8v"]
[ext_resource type="PackedScene" uid="uid://bbc4trnrr1rb1" path="res://Scenes/LightButton.tscn" id="4_nox5i"]
[ext_resource type="PackedScene" uid="uid://cpv5gxnkp2ufn" path="res://Scenes/Staircase.tscn" id="8_2f72x"]
[ext_resource type="PackedScene" uid="uid://dmverauqe7cvo" path="res://Scenes/BackStairs.tscn" id="8_ww6yr"]
[ext_resource type="PackedScene" uid="uid://beywi8n732l0h" path="res://Scenes/MediumRoom.tscn" id="9_51xe1"]
[ext_resource type="PackedScene" uid="uid://bi44o4avaitvk" path="res://Scenes/LongRoom.tscn" id="10_cjksu"]
[ext_resource type="PackedScene" uid="uid://chpg542bvxo26" path="res://Scenes/SmallRoom.tscn" id="10_f8m8l"]
[ext_resource type="PackedScene" uid="uid://busjyo8vpx4a1" path="res://Scenes/MediumRoomVariant.tscn" id="12_pbfa4"]
[ext_resource type="PackedScene" uid="uid://bcda2y6dwakt2" path="res://Scenes/Hallway.tscn" id="12_vw15l"]
[ext_resource type="PackedScene" uid="uid://cfnw8k6pdi7uk" path="res://Scenes/Enemy/Shashumga.tscn" id="18_rx5kh"]

[sub_resource type="PlaneMesh" id="PlaneMesh_osmvm"]
size = Vector2(4, 6)

[sub_resource type="BoxMesh" id="BoxMesh_a4sfj"]
size = Vector3(4, 0.01, 2)

[sub_resource type="BoxMesh" id="BoxMesh_8mtia"]
size = Vector3(0.5, 0.1, 2)

[sub_resource type="BoxMesh" id="BoxMesh_1oc3i"]
size = Vector3(0.5, 0.1, 2)

[sub_resource type="BoxMesh" id="BoxMesh_28mkb"]
size = Vector3(3, 0.1, 2)

[sub_resource type="PlaneMesh" id="PlaneMesh_t0r1s"]
size = Vector2(6, 2)

[sub_resource type="BoxMesh" id="BoxMesh_nkysw"]
size = Vector3(6, 0.01, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_wv7b5"]
size = Vector3(0.05, 0.2, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_7f37h"]
size = Vector3(0.05, 0.2, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_5wy5q"]
size = Vector3(0.05, 0.2, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_ef4l2"]
size = Vector3(0.05, 0.2, 0.2)

[sub_resource type="Environment" id="Environment_ktvgq"]
background_mode = 1

[sub_resource type="Environment" id="Environment_j31tm"]
background_mode = 1
tonemap_mode = 2

[node name="Node3D" type="Node3D"]
script = ExtResource("1_ogyp8")

[node name="Clock" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_1a6f2")

[node name="MarginContainer" type="MarginContainer" parent="Clock"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer2" type="VBoxContainer" parent="Clock/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Clock/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8

[node name="HourLabel" type="Label" parent="Clock/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "CURRENTHOUR"
label_settings = ExtResource("3_a7h8y")

[node name="Timer" type="Timer" parent="Clock"]
wait_time = 10.0
autostart = true

[node name="Power" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_x087o")

[node name="MarginContainer" type="MarginContainer" parent="Power"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Power/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="UsageLabel" type="Label" parent="Power/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Usage:"
label_settings = ExtResource("3_a7h8y")

[node name="HBoxContainer" type="HBoxContainer" parent="Power/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PowerLevel" type="Label" parent="Power/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Power:"
label_settings = ExtResource("3_a7h8y")

[node name="Player" parent="." node_paths=PackedStringArray("camera_parent") instance=ExtResource("1_r5yxd")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.5, 1, 0)
camera_parent = NodePath("../Cameras")

[node name="Office" type="Node3D" parent="."]
script = ExtResource("1_g8cfh")

[node name="Floor" type="MeshInstance3D" parent="Office"]
mesh = SubResource("PlaneMesh_osmvm")
skeleton = NodePath("../..")

[node name="Ceiling" type="MeshInstance3D" parent="Office"]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 2, 0)
mesh = SubResource("PlaneMesh_osmvm")
skeleton = NodePath("../..")

[node name="Walls" type="Node3D" parent="Office"]

[node name="LeftWall" type="MeshInstance3D" parent="Office/Walls"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, -3)
mesh = ExtResource("4_kaq8v")

[node name="RightWall" type="MeshInstance3D" parent="Office/Walls"]
transform = Transform3D(-1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, 0, 1, 3)
mesh = SubResource("BoxMesh_a4sfj")

[node name="FrontWall1" type="MeshInstance3D" parent="Office/Walls"]
transform = Transform3D(1.49012e-07, -1, 4.37114e-08, -1.77636e-15, -4.37114e-08, -1, 1, 2.08616e-07, -7.10543e-15, 0, 1, -2.75)
mesh = SubResource("BoxMesh_8mtia")
skeleton = NodePath("../FrontWall")

[node name="FrontWall2" type="MeshInstance3D" parent="Office/Walls"]
transform = Transform3D(1.49012e-07, -1, 4.37114e-08, -1.77636e-15, -4.37114e-08, -1, 1, 2.08616e-07, -7.10543e-15, 0, 1, 2.75)
mesh = SubResource("BoxMesh_1oc3i")
skeleton = NodePath("../FrontWall")

[node name="FrontWall3" type="MeshInstance3D" parent="Office/Walls"]
transform = Transform3D(1.49012e-07, -1, 4.37114e-08, -1.77636e-15, -4.37114e-08, -1, 1, 2.08616e-07, -7.10543e-15, 0, 1, 0)
mesh = SubResource("BoxMesh_28mkb")
skeleton = NodePath("../FrontWall")

[node name="FrontWall" type="MeshInstance3D" parent="Office/Walls"]
transform = Transform3D(1.49012e-07, -1, 4.37114e-08, -1.77636e-15, -4.37114e-08, -1, 1, 2.08616e-07, -7.10543e-15, 0, 1, 0)
visible = false
mesh = SubResource("PlaneMesh_t0r1s")

[node name="BackWall" type="MeshInstance3D" parent="Office/Walls"]
transform = Transform3D(-2.36434e-07, 1, -4.37114e-08, -1.77636e-15, -4.37114e-08, -1, -1, -2.96039e-07, 1.09268e-14, -2, 1, 0)
mesh = SubResource("BoxMesh_nkysw")

[node name="LeftDoor" parent="Office" instance=ExtResource("2_6y7mn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5)

[node name="RightDoor" parent="Office" instance=ExtResource("2_6y7mn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.5)

[node name="DoorButtonLeft" type="Area3D" parent="Office"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, 1.23, -1.25)

[node name="MeshInstance" parent="Office/DoorButtonLeft" instance=ExtResource("3_dfoe6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Office/DoorButtonLeft"]
shape = SubResource("BoxShape3D_wv7b5")

[node name="DoorButtonRight" type="Area3D" parent="Office"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, 1.23, 1.25)

[node name="MeshInstance" parent="Office/DoorButtonRight" instance=ExtResource("3_dfoe6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Office/DoorButtonRight"]
shape = SubResource("BoxShape3D_7f37h")

[node name="LightButtonLeft" type="Area3D" parent="Office"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, 1, -1.25)

[node name="LeftLightButton" parent="Office/LightButtonLeft" instance=ExtResource("4_nox5i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Office/LightButtonLeft"]
shape = SubResource("BoxShape3D_5wy5q")

[node name="LightButtonRight" type="Area3D" parent="Office"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, 1, 1.25)

[node name="RightLightButton" parent="Office/LightButtonRight" instance=ExtResource("4_nox5i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Office/LightButtonRight"]
shape = SubResource("BoxShape3D_ef4l2")

[node name="Room Light" type="OmniLight3D" parent="Office"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2, 1.78024, 2.18557e-08)
light_color = Color(0.560784, 0.560784, 0.560784, 1)

[node name="LightLeft" type="SpotLight3D" parent="Office"]
transform = Transform3D(0.819152, 0, -0.573576, 0, 1, 0, 0.573576, 0, 0.819152, -1, 1, -1.25)
spot_range = 3.2
spot_angle = 39.55

[node name="LightRight" type="SpotLight3D" parent="Office"]
transform = Transform3D(-0.819152, 0, -0.573576, 0, 1, 0, 0.573576, 0, -0.819152, -1, 1, 1.25)
spot_range = 3.2
spot_angle = 39.55

[node name="LeftLight" type="OmniLight3D" parent="Office"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0368371, 0.867576, -2.1232)
visible = false
omni_range = 1.201

[node name="RightLight" type="OmniLight3D" parent="Office"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, 2)
visible = false
omni_range = 1.201

[node name="Map" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -7)

[node name="Front Stairs" parent="Map" instance=ExtResource("8_2f72x")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="Back Stairs" parent="Map" instance=ExtResource("8_ww6yr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.053, 0, 13.4208)

[node name="Room3" parent="Map" instance=ExtResource("9_51xe1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21, 0, -6)

[node name="Room4" parent="Map" instance=ExtResource("10_cjksu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 9)

[node name="Room5" parent="Map" instance=ExtResource("10_f8m8l")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28, 0, -4)

[node name="Room6" parent="Map" instance=ExtResource("10_f8m8l")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 0, -4)

[node name="Room7" parent="Map" instance=ExtResource("12_pbfa4")]
transform = Transform3D(-1, -7.64274e-15, 8.74228e-08, 0, -1, -8.74228e-08, 8.74228e-08, -8.74228e-08, 1, -18, 2, -4)

[node name="Room8" parent="Map" instance=ExtResource("9_51xe1")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -24, 0, 14)

[node name="Room9" parent="Map" instance=ExtResource("10_f8m8l")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -33, 0, 10)

[node name="Hallway" parent="Map" instance=ExtResource("12_vw15l")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -32, 0, -2)

[node name="Cameras" type="Node3D" parent="."]

[node name="Cam1" type="Camera3D" parent="Cameras"]
transform = Transform3D(0.741133, 0.449227, -0.498917, 1.07413e-08, 0.743145, 0.66913, 0.671359, -0.495914, 0.550769, 6.57532, 7.46494, -7.59923)
fov = 70.0
far = 20.0

[node name="Cam2" type="Camera3D" parent="Cameras"]
transform = Transform3D(-0.733635, 0.41255, -0.539984, -3.72529e-09, 0.794627, 0.607099, 0.679544, 0.445389, -0.582966, -15.3084, 7.73072, -1.46647)
fov = 70.0
far = 20.0

[node name="Cam3" type="Camera3D" parent="Cameras"]
transform = Transform3D(-0.532152, -0.425345, 0.732049, 0, 0.864643, 0.502386, -0.846649, 0.267346, -0.460122, 24.7211, 1.90486, -14.6898)
fov = 70.0
far = 20.0

[node name="Cam4" type="Camera3D" parent="Cameras"]
transform = Transform3D(-0.779283, -0.370081, 0.505725, 6.28643e-08, 0.807002, 0.590549, -0.626672, 0.460205, -0.628883, 7.39411, 1.78686, 0.130886)
environment = SubResource("Environment_ktvgq")
fov = 70.0
far = 100.0

[node name="Cam5" type="Camera3D" parent="Cameras"]
transform = Transform3D(-0.665791, 0.338229, -0.665074, -4.53416e-09, 0.891355, 0.453306, 0.746139, 0.301807, -0.593456, 9.60421, 1.89516, 0.134578)
fov = 70.0
far = 100.0

[node name="Cam6" type="Camera3D" parent="Cameras"]
transform = Transform3D(-0.855129, 0.289819, -0.429836, 2.98023e-08, 0.829135, 0.559048, 0.518415, 0.478058, -0.709018, 27.791, 1.88362, -12.8659)
fov = 70.0
far = 20.0

[node name="Cam7" type="Camera3D" parent="Cameras"]
transform = Transform3D(0.742946, -0.363103, 0.562305, 0, 0.840075, 0.542471, -0.669351, -0.403027, 0.62413, -6.41541, 1.83451, -9.41927)

[node name="Cam8" type="Camera3D" parent="Cameras"]
transform = Transform3D(0.175367, 0.534064, -0.827056, -3.84284e-08, 0.840075, 0.542471, 0.984503, -0.0951314, 0.147321, -19.8935, 1.83451, -10.7654)

[node name="Cam9" type="Camera3D" parent="Cameras"]
transform = Transform3D(-0.609135, 0.430216, -0.666235, -3.84284e-08, 0.840075, 0.542471, 0.793066, 0.330438, -0.511719, -25.6723, 1.85312, 5.52504)

[node name="Cam10" type="Camera3D" parent="Cameras"]
transform = Transform3D(-0.999655, 0.0246718, -0.00900621, 0.0127864, 0.756689, 0.65365, 0.0229416, 0.653309, -0.756743, -32.1425, 1.85312, 1.51475)

[node name="Cam11" type="Camera3D" parent="Cameras"]
transform = Transform3D(0.0595329, 0, 0.998226, 0, 1, 0, -0.998226, 0, 0.0595329, -21.0241, 1.64393, -8.11537)
fov = 70.0
far = 100.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_j31tm")

[node name="Shashumga" parent="." instance=ExtResource("18_rx5kh")]
transform = Transform3D(-0.0819385, 0, 0.996637, 0, 1, 0, -0.996637, 0, -0.0819385, 0.678359, 5.96046e-08, -2.51406)
movement_points = Array[Vector3]([Vector3(-25, 0, 8), Vector3(-18, 0, -11), Vector3(-33, 0, 4), Vector3(-23.5, 0, -9), Vector3(8, 2, -12), Vector3(21, 0, -14), Vector3(0.678359, 5.96046e-08, -2.51406)])
night_AI_levels = Array[int]([0, 3, 0, 2, 5, 10])

[node name="MapPoints" type="Node3D" parent="."]

[node name="1U" type="Node3D" parent="MapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 3.35, -8.5)

[node name="1D" type="Node3D" parent="MapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 2, -12)

[node name="2U" type="Node3D" parent="MapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 4, 7)

[node name="2D" type="Node3D" parent="MapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.5, 1.5, 4)

[node name="3" type="Node3D" parent="MapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21, 0, -14)

[node name="4" type="Node3D" parent="MapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 2)

[node name="5" type="Node3D" parent="MapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.5, 0, 2.5)

[node name="6" type="Node3D" parent="MapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28.5, 0, -11.5)

[node name="7" type="Node3D" parent="MapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -11.5)

[node name="8" type="Node3D" parent="MapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 0, -11)

[node name="9" type="Node3D" parent="MapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21.5, 0, 7.5)

[node name="10" type="Node3D" parent="MapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -33, 0, 4)

[node name="11" type="Node3D" parent="MapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.5, 0, -9)

[node name="12" type="Node3D" parent="MapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -36, 0, -9)

[node name="LeftOffice" type="Node3D" parent="MapPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -2.5)

[connection signal="hour_change" from="Clock" to="Shashumga" method="_on_clock_hour_change"]
[connection signal="timeout" from="Clock/Timer" to="Clock" method="_on_timer_timeout"]
[connection signal="camera_state_change" from="Player" to="Power" method="_on_player_camera_state_change"]
[connection signal="left_light_change" from="Office" to="Power" method="_on_office_left_light_change"]
[connection signal="right_light_change" from="Office" to="Power" method="_on_office_right_light_change"]
[connection signal="left_door_change" from="Office/LeftDoor" to="." method="_on_left_door_left_door_change"]
[connection signal="left_door_change" from="Office/LeftDoor" to="Power" method="_on_left_door_left_door_change"]
[connection signal="right_door_change" from="Office/RightDoor" to="." method="_on_right_door_right_door_change"]
[connection signal="right_door_change" from="Office/RightDoor" to="Power" method="_on_right_door_right_door_change"]
[connection signal="input_event" from="Office/DoorButtonLeft" to="Office" method="_on_door_button_left_input_event"]
[connection signal="input_event" from="Office/DoorButtonRight" to="Office" method="_on_door_button_right_input_event"]
[connection signal="input_event" from="Office/LightButtonLeft" to="Office" method="_on_light_button_left_input_event"]
[connection signal="input_event" from="Office/LightButtonRight" to="Office" method="_on_light_button_right_input_event"]
